# ENKO_Practice1

./: CMakeLists.txt  ENKO_Practice1.cbp  ENKO_Practice1.depend  ENKO_Practice1.layout  HomoAbstract.c  HomoAbstract.h  HomoHabilis.c  HomoHabilis.h  HomoSapiens.c  HomoSapiens.h  README.md  main.c
Activity/: Activity.c  Activity.h
ActivityAdapters/: Activity_Adapter_Hunting.c  Activity_Adapter_Hunting.h  Activity_Adapter_Math.c  Activity_Adapter_Math.h  Activity_Adapter_Reading.c  Activity_Adapter_Reading.h
ActivityParameters/: ActivityMathArg.c  ActivityMathArg.h
Callback_HeightWeight/: Callback_HeightSapiens.c  Callback_HeightSapiens.h
